--- a/templates/article.html
+++ b/templates/article.html
@@ -1,6 +1,6 @@
-{% extends 'basic_template.html' %}
-{% load static %}
-{% load social_share %}
+{% extends 'basic_template.html' %}     {# Dziedziczenie z głównego szablonu strony #}
+{% load static %}      {# Wczytanie tagu 'static' do obsługi plików statycznych (np. obrazów, CSS) #}
+{% load social_share %}   {# Wczytanie niestandardowych tagów do udostępniania treści w mediach społecznościowych #}
 {% block content %}
 
     <!-- Feed -->
@@ -14,20 +14,24 @@
                 <img src="{{ article.image.url }}" alt="Miniaturka artykułu"
                      class="w-full h-[250px] object-cover rounded-md">
             {% else %}
+                <!-- Obraz zastępczy, jeśli brak miniatury -->
                 <img src="https://picsum.photos/seed/{{ article.id }}/800/250" alt="Domyślny obraz"
                      class="w-full h-[250px] object-cover rounded-md">
             {% endif %}
 
-            <!-- Autor -->
+            <!-- Link do profilu autora artykułu -->
             <div class="flex items-center gap-4">
                 <a href="{% url 'user_profile_view' article.user.id %}" class="flex items-center gap-2">
                     {% if article.user.profile.avatar %}
+                        <!-- Awatar użytkownika (jeśli jest ustawiony) -->
                         <img src="{{ article.user.profile.avatar.url }}" class="rounded-full w-12 h-12"
                              alt="Avatar użytkownika">
                     {% else %}
+                        <!-- Domyślny awatar, jeśli użytkownik nie ustawił swojego -->
                         <img src="{% static 'img/profil.jpg' %}" class="rounded-full w-12 h-12"
                              alt="Domyślny avatar">
                     {% endif %}
+                    <!-- Imię i nazwisko użytkownika -->
                     <div>
                         <p class="font-semibold">
                             {% if article.user.first_name or article.user.last_name %}
@@ -39,7 +43,7 @@
                 </a>
             </div>
 
-            <!-- Tytuł, data i wyświetlenia -->
+            <!-- Tytuł artykułu, data publikacji i liczba wyświetleń -->
             <div>
                 <h2 class="mt-2 text-2xl font-bold text-gray-900">{{ article.title }}</h2>
                 <p class="mt-1 text-sm text-gray-500">
@@ -49,18 +53,20 @@
 
 
             <!-- Treść artykułu -->
-            <div class="mt-6 leading-relaxed text-base text-gray-700">
+            <div class="mt-6 leading-relaxed text-base text-gray-700">     {# Wyświetlenie zawartości artykułu z bazy danych #}
                 {{ article.content }}
             </div>
+            <!-- Informacja o załączonym pliku -->
             <div class="mt-6 leading-relaxed text-base text-gray-700 inline-block">
-                {% if article.file %}
+                {% if article.file %}    {# Blok sprawdzający, czy artykuł ma dołączony plik #}
+                    <!-- Jeśli plik istnieje, pokazujemy ikonę i komunikat -->
                     <div class="flex items-center gap-2">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                              stroke="currentColor" class="size-5">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                   d="m18.375 12.739-7.693 7.693a4.5 4.5 0 0 1-6.364-6.364l10.94-10.94A3 3 0 1 1 19.5 7.372L8.552 18.32m.009-.01-.01.01m5.699-9.941-7.81 7.81a1.5 1.5 0 0 0 2.112 2.13"></path>
                         </svg>
-                        To tego artykułu dołączony jest plik, kliknij "pobierz" aby go ściągnąć.
+                        Do tego artykułu dołączony jest plik, kliknij "pobierz" aby go ściągnąć.
                     </div>
                 {% else %}
                     Brak pliku do pobrania.
@@ -82,7 +88,6 @@
                         </svg>
                         Pobierz
                     </a>
-
                     <!-- Przycisk Follow/Unfollow -->
                     <button type="button"
                             class="follow-toggle text-blue-600 hover:underline flex items-center gap-1"
@@ -90,7 +95,7 @@
                             data-follow-url="{% url 'follow_article' article.id %}"
                             data-unfollow-url="{% url 'unfollow_article' article.id %}"
                             data-followed="{{ article.followed_by_user|yesno:"true,false" }}">
-                        {% if article.followed_by_user %}
+                        {% if article.followed_by_user %}    {# Jeśli użytkownik już obserwuje artykuł to ikona NIE obserwuj #}
                             <!-- Ikona NIE obserwuj -->
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                  class="size-6" style="stroke:#FFD700;">
@@ -98,7 +103,7 @@
                                       d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0"></path>
                             </svg>
                             <span class="follow-label">Nie obserwuj</span>
-                        {% else %}
+                        {% else %}    {# Jeśli jeszcze nie obserwuje to ikona dzwonka - obserwuj #}
                             <!-- Ikona obserwuj -->
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                  stroke="#FFD700" class="size-6">
@@ -112,24 +117,26 @@
 
                 <!-- Prawa część: Polub to -->
                 <div class="flex items-center gap-6">
+
                     <!-- Liczba polubień + serce -->
-                    <span class="like-info flex items-center gap-1 text-gray-700">
-                        <span class="like-count">{{ article_like_count }}</span>
+                    <span class="like-info flex items-center gap-1 text-gray-700 leading-none align-middle">
+                        <span class="like-count text-sm">{{ article.like_count }}</span>
                         {% if article.liked_by_user %}
                             <!-- dynamicznie ustawia, czy użytkownik już polubił dany artykuł -->
-                            <svg class="heart-icon size-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                            <svg class="heart-icon w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
                                  fill="red" stroke="red">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                       d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"></path>
                             </svg>
                         {% else %}
-                            <svg class="heart-icon size-5" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            <svg class="heart-icon w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none"
                                  viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                       d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"></path>
                             </svg>
                         {% endif %}
                     </span>
+
                     <!-- Przycisk like/unlike -->
                     <button
                             type="button"
@@ -145,6 +152,7 @@
                         {% if article.liked_by_user %}Lubisz to{% else %}Polub to{% endif %}
                         </span>
                     </button>
+
                     <!-- Przycisk do udostępniania w mediach społecznościowych -->
                     <div class="relative" id="share-dropdown-container-{{ article.id }}">
                         <button type="button"
@@ -154,10 +162,11 @@
                             id="share-dropdown-btn-{{ article.id }}">
                             <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 inline" fill="none" viewBox="0 0 24 24" stroke="#2563eb">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                      d="M17.5 6.5a2.5 2.5 0 1 0-2.45-2.01l-6.1 3.05a2.5 2.5 0 1 0 0 3.92l6.1 3.05a2.5 2.5 0 1 0 .7-1.45l-6.1-3.05a2.5 2.5 0 0 0 0-1.02l6.1-3.05A2.5 2.5 0 0 0 17.5 6.5z"/>
+                                      d="M17.5 6.5a2.5 2.5 0 1 0-2.45-2.01l-6.1 3.05a2.5 2.5 0 1 0 0 3.92l6.1 3.05a2.5 2.5 0 1 0 .7-1.45l-6.1-3.05a2.5 2.5 0 0 0 0-1.02l6.1-3.05A2.5 2.5 0 0 0 17.5 6.5z"></path>
                             </svg>
                             <span>Podziel się</span>
                         </button>
+
                         <!-- Opcje serwisów do udostępniania - https://github.com/fcurella/django-social-share?tab=readme-ov-file -->
                         <div class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-200 rounded shadow-lg z-10"
                              id="share-dropdown-{{ article.id }}">
@@ -200,23 +209,30 @@
         <div class="bg-white p-4 rounded-md shadow mt-6">
             <h2 class="text-lg font-semibold text-gray-800 mb-4">Komentarze</h2>
 
-            {% if comments %}
+            {% if comments %}            {# Sprawdzenie, czy istnieją jakieś komentarze do artykułu #}
                 {% for comment in comments %}
                     <div class="divide-y divide-gray-200">
+                        <!-- Pojedynczy komentarz -->
                         <div class="flex items-start gap-4 py-4">
                             {% if comment.user.profile.avatar %}
+                                <!-- Awatar użytkownika -->
                                 <img src="{{ comment.user.profile.avatar.url }}" alt="Avatar użytkownika"
                                      class="w-10 h-10 rounded-full bg-gray-100">
                             {% else %}
+                                <!-- Domyślny awatar, jeśli brak własnego -->
                                 <img src="{% static 'img/profil.jpg' %}" alt="Domyślny avatar"
                                      class="w-10 h-10 rounded-full bg-gray-100">
                             {% endif %}
                             <div>
+                                <!-- Nazwa użytkownika -->
                                 <h3 class="font-medium text-gray-900">{{ comment.user.username }}</h3>
+
+                                <!-- Data dodania komentarza -->
                                 <span class="border inline-flex items-center rounded-md
                             bg-blue-50 px-2 py-1 text-xs font-medium text-blue-700 ring-1
                             ring-blue-700/10 ring-inset">{{ comment.created_at|date:"j E Y" }}
                             </span>
+                                 <!-- Właściwa treść komentarza -->
                                 <div class="mt-4 space-y-6 text-base text-gray-600 italic">
                                     {{ comment.content }}
                                 </div>
@@ -225,6 +241,7 @@
                     </div>
                 {% endfor %}
             {% else %}
+                <!-- Komunikat, gdy brak komentarzy -->
                 <p class="text-sm text-gray-500 italic">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                          stroke="currentColor" class="size-6">
@@ -235,6 +252,8 @@
                     Brak komentarzy do tego artykułu.
                 </p>
             {% endif %}
+
+            <!-- Formularz dodawania nowego komentarza -->
             {% include "_comment_form.html" %}
         </div>
 
